frontend: Improve users pages
